src/test/resources/syntactic/error/TC_ERROR_ID_NO_SEMICOLON.ru
/? ERROR: SINTACTICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 6 | COLUMNA 1 | SE ESPERABA: ; Y SE ENCONTRO: } |
struct Mundo {
    pri Int a /? idObject a sin cerrar, falta ; 
}
impl Mundo{
    .(){;}
}
start{
}